Fix for bug 88761 (html code for selected and noshade (and other minimizable attributes) not w3c conformant). r=heikki, sr=jst.